--- a/html/Cursos.html
+++ b/html/Cursos.html
@@ -7,6 +7,15 @@
     <title>Cursos</title>
 </head>
 <body>
-    <h1>Bem Vindo ao Cursos</h1>
+    
+        <form method="post" >
+            <label for="nCurso">Nome Curso</label><br>
+            <input type="text" id="titulo" name="titulo" ><br>
+            <label for="lname">Conteudo:</label><br>
+            <input type="text" id="conteudo" name="conteudo" ><br><br>
+            <input type="submit" value="Submit" >
+          </form> 
+
+  
 </body>
 </html>
